--- a/vocabcards.html
+++ b/vocabcards.html
@@ -43,7 +43,7 @@
     <div id="card" class="card">
       <!-- フィルタパネル -->
       <div id="filterPanel" class="panel" style="display:none;">
-        <h4>表示レベル</h4>
+        <h4>Filter</h4>
         <label><input type="checkbox" class="filterCheckbox" data-lv="1" checked /> Lv1</label><br/>
         <label><input type="checkbox" class="filterCheckbox" data-lv="2" checked /> Lv2</label><br/>
         <label><input type="checkbox" class="filterCheckbox" data-lv="3" checked /> Lv3</label><br/>
@@ -55,7 +55,7 @@
           <div class="face-top">
             <button class="icon-small no-flip" onclick="addNewCard()">＋</button>
             <button class="icon-small no-flip" onclick="toggleFilterPanel()">☰</button>
-            <button class="icon-small no-flip" id="editBtn" title="編集" onclick="openEditPopup()">🖊</button>
+            <button class="icon-small no-flip" id="editBtn" title="Edit" onclick="openEditPopup()">🖊</button>
           </div>
           <div class="face-content" id="front"></div>
           <div class="face-bottom">
@@ -72,7 +72,7 @@
 
         <div class="face back">
           <div class="face-top">
-            <button class="icon-small no-flip" id="editBtnBack" title="編集" onclick="openEditPopup()">🖋</button>
+            <button class="icon-small no-flip" id="editBtnBack" title="Edit" onclick="openEditPopup()">🖋</button>
           </div>
           <div class="face-content" id="back"></div>
         </div>
@@ -104,14 +104,14 @@
     <label>Back<br/>
       <textarea id="editBack" class="modal-textbox"rows="2"></textarea>
     </label>
-    <label>レベル
+    <label>Level
       <select id="editLevel" class="modal-select">
         <option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>
       </select>
     </label>
     <div class="modal-actions">
-      <button class="rounded" onclick="applyEdit()">保存（ローカル）</button>
-      <button id="deleteBtn" class="rounded" onclick="deleteCurrentCard()">削除</button>
+      <button class="rounded" onclick="applyEdit()">Apply</button>
+      <button id="deleteBtn" class="rounded" onclick="deleteCurrentCard()">Delete</button>
     </div>
   </div>
 </div>
@@ -119,11 +119,11 @@
 <!-- バッチ編集ポップアップ -->
 <div id="batchPopup" class="modal large" style="display:none;">
   <div class="modal-content">
-    <h3>一括編集</h3>
+    <h3>Batch Edit</h3>
     <div style="display:flex; gap:8px;  margin-bottom:0px;">
-      <input id="batchSearch" placeholder="検索（表面/裏面）" class="patch_bar" oninput="renderBatchList()" />
+      <input id="batchSearch" placeholder="Search (Front/Back)" class="patch_bar" oninput="renderBatchList()" />
       <select id="batchFilterLevel" class="patch_bar" onchange="renderBatchList()">
-        <option value="">すべてのレベル</option>
+        <option value="">All Levels</option>
         <option value="1">Lv1</option>
         <option value="2">Lv2</option>
         <option value="3">Lv3</option>
@@ -136,18 +136,18 @@
     <div id="batchList" class="batch-list"></div>
 
     <div id="batchBottomBar" style="margin-top:8px; display:flex; gap:8px;">
-      <button id="batchSelectBtn" class="rounded" onclick="toggleBatchSelectMode()">複数選択</button>
-      <button id="batchRunBtn" class="rounded hidden" onclick="runBatchAction()">選択分を実行</button>
+      <button id="batchSelectBtn" class="rounded" onclick="toggleBatchSelectMode()">Multi-select</button>
+      <button id="batchRunBtn" class="rounded hidden" onclick="runBatchAction()">Apply to selected</button>
     </div>
   </div>
 </div>
 
 <div id="batchModeModal" class="modal" style="display:none;">
   <div class="modal-content">
-    <h3>一括操作</h3>
+    <h3>Batch Actions</h3>
     <button class="modal-close" onclick="closeBatchModeModal()">×</button>
-    <button class="rounded" onclick="startBatchLevel()">レベル一括変更</button>
-    <button class="rounded" onclick="startBatchDelete()">一括削除</button>
+    <button class="rounded" onclick="startBatchLevel()">Change levels</button>
+    <button class="rounded" onclick="startBatchDelete()">Delete selected</button>
 
     <div id="batchLevelChooser" style="display:none; margin-top:12px;">
       <select id="batchLevelTarget" class="modal-select">
@@ -157,7 +157,7 @@
         <option value="4">Lv4</option>
         <option value="5">Lv5</option>
       </select>
-      <button class="rounded" onclick="confirmBatchLevel()">このレベルにする</button>
+      <button class="rounded" onclick="confirmBatchLevel()">Set to this level</button>
     </div>
   </div>
 </div>
