--- a/vocabcards.html
+++ b/vocabcards.html
@@ -31,8 +31,8 @@
 
 <!-- 右上アイコン群 -->
     <div id="topControls">
-      <button id="batchBtn" class="icon-btn" onclick="openBatchEditor()">一覧</button>
-      <button id="saveAllBtn" class="save-btn" onclick="saveAll()">保存</button>
+      <button id="batchBtn" class="icon-btn" onclick="openBatchEditor()">List</button>
+      <button id="saveAllBtn" class="save-btn" onclick="saveAll()">Save</button>
     </div>
 
 <!-- メイン -->
@@ -54,8 +54,8 @@
         <div class="face front">
           <div class="face-top">
             <button class="icon-small no-flip" onclick="addNewCard()">＋</button>
-            <button class="icon-small no-flip" onclick="toggleFilterPanel()">☰</button>
             <button class="icon-small no-flip" id="editBtn" title="Edit" onclick="openEditPopup()">🖊</button>
+            <button class="icon-small no-flip" onclick="toggleFilterPanel()">☰</button>           
           </div>
           <div class="face-content" id="front"></div>
           <div class="face-bottom">
