--- a/vocabcards.html
+++ b/vocabcards.html
@@ -55,7 +55,7 @@
           <div class="face-top">
             <button class="icon-small no-flip" onclick="addNewCard()">＋</button>
             <button class="icon-small no-flip" id="editBtn" title="Edit" onclick="openEditPopup()">🖊</button>
-            <button class="icon-small no-flip" onclick="toggleFilterPanel()">☰</button>           
+            <button class="filter no-flip" onclick="toggleFilterPanel()">☰</button>           
           </div>
           <div class="face-content" id="front"></div>
           <div class="face-bottom">
