vocabcards.html を更新

--- a/vocabcards.html
+++ b/vocabcards.html
@@ -72,7 +72,7 @@
 
         <div class="face back">
           <div class="face-top">
-            <button class="icon-small no-flip" id="editBtnBack" title="Edit" onclick="openEditPopup()">🖋</button>
+            <button class="icon-small no-flip" id="editBtnBack" title="Edit" onclick="openEditPopup()">🖊️</button>
           </div>
           <div class="face-content" id="back"></div>
         </div>
