vocabcards.html を更新

--- a/vocabcards.html
+++ b/vocabcards.html
@@ -74,7 +74,7 @@
           <div class="face-top">
             <button class="icon-small no-flip" id="editBtnBack" title="Edit" onclick="openEditPopup()">🖊️</button>
           </div>
-          <div class="face-content" id="back"></div>
+          <div class="face-content" style="bottom:10px;" id="back"></div>
         </div>
       </div>
     </div>
